contact css updated

--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -6,7 +6,7 @@
     color: aliceblue;
     margin-left: -10vw;
     text-align: center;
-    padding: 40px;
+    padding: 2vh;
 }
 .backcont{
     height:20vh;
