--- a/src/styles/Donate.module.css
+++ b/src/styles/Donate.module.css
@@ -2,7 +2,7 @@
 .circlecat{
     background-color: rgba(202, 17, 63, 0.4);
     -webkit-backdrop-filter: blur(2px);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(px);
     border-radius: 50%;
     width: 3rem;
     height:3rem;
